@@ -1,36 +1,39 @@
-package com.xiaoleilu.hutool.db.ds.tomcat;
+package com.xiaoleilu.hutool.db.ds.jndi;
 
-import java.util.Collection;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
-import org.apache.tomcat.jdbc.pool.DataSource;
-import org.apache.tomcat.jdbc.pool.PoolProperties;
+import javax.sql.DataSource;
 
+import com.xiaoleilu.hutool.db.DbUtil;
 import com.xiaoleilu.hutool.db.ds.DSFactory;
 import com.xiaoleilu.hutool.exceptions.DbRuntimeException;
 import com.xiaoleilu.hutool.setting.Setting;
-import com.xiaoleilu.hutool.util.CollectionUtil;
 import com.xiaoleilu.hutool.util.StrUtil;
 
 /**
- * Tomcat-Jdbc-Pool数据源工厂类
+ * JNDI数据源工厂类<br>
+ * Setting配置样例：<br>
+ * ---------------------<br>
+ * [group]<br>
+ * jndi = jdbc/TestDB<br>
+ * ---------------------<br>
+ * 
  * @author Looly
  *
  */
-public class TomcatDSFactory extends DSFactory {
+public class JndiDSFactory extends DSFactory {
 	
 	private Setting setting;
 	/** 数据源池 */
 	private Map<String, DataSource> dsMap;
 	
-	public TomcatDSFactory() {
+	public JndiDSFactory() {
 		this(null);
 	}
 	
-	public TomcatDSFactory(Setting setting) {
-		super("Tomcat-Jdbc-Pool");
-		checkCPExist(DataSource.class);
+	public JndiDSFactory(Setting setting) {
+		super("JNDI Datasource");
 		if(null == setting){
 			setting = new Setting(DEFAULT_DB_SETTING_PATH, true);
 		}
@@ -58,49 +61,29 @@ public class TomcatDSFactory extends DSFactory {
 
 	@Override
 	public void close(String group) {
-		if (group == null) {
-			group = StrUtil.EMPTY;
-		}
-
-		DataSource ds = dsMap.get(group);
-		if (ds != null) {
-			ds.close();
-			dsMap.remove(group);
-		}
+		//JNDI Datasource not support destroy method
 	}
 
 	@Override
 	public void destroy() {
-		if(CollectionUtil.isNotEmpty(dsMap)){
-			Collection<DataSource> values = dsMap.values();
-			for (DataSource ds : values) {
-				if(null != ds){
-					ds.close();
-				}
-			}
-			dsMap.clear();
-			dsMap = null;
-		}
+		//JNDI Datasource not support destroy method
 	}
 
 	/**
 	 * 创建数据源
-	 * @param group 分组
-	 * @return Tomcat数据源 {@link DataSource}
+	 * @param group JNDI名
+	 * @return 数据源 {@link DataSource}
 	 */
 	private DataSource createDataSource(String group){
 		if (group == null) {
 			group = StrUtil.EMPTY;
 		}
 		
-		Setting config = setting.getSetting(group);
-		if(null == config || config.isEmpty()){
-			throw new DbRuntimeException("No Tomcat jdbc pool config for group: [{}]", group);
+		String jndiName = setting.getByGroup("jndi", group);
+		if(StrUtil.isEmpty(jndiName)){
+			throw new DbRuntimeException("No setting name [jndi] for group [{}]", group);
 		}
-		PoolProperties poolProps = new PoolProperties();
-		config.toBean(poolProps);
-		final DataSource ds = new DataSource();
-		ds.setPoolProperties(poolProps);
+		DataSource ds = DbUtil.getJndiDs(jndiName);
 		
 		return ds;
 	}
