@@ -355,3 +355,6 @@ Entity中toVo区别是否忽略大小写
 1、全面更新db模块中的ds部分，使用工厂类自动选定连接池实现
 2、扩充CollectionUtil，增加交集（intersection）、并集（union）、差集（disjunction）方法
 3、ds部分增加Tomcat-jdbc-pool的实现
+4、ds增加JndiDSFactory，支持JNDI数据源
+5、修复各个包中error日志使用问题导致的无法打印堆栈
+6、Setting中删除大量重复的方法，统一getXXX
